# tatou

./: .env.ci  .gitignore  README.md  collect_rmap_pdfs.py  conftest.py  docker-compose.ci.yml  docker-compose.yml  flag  pytest.ini  requirements.txt  sample.env  setup.cfg
artifacts/: Coverage report.html
db/: tatou.sql
fuzzer/: fuzz_radamsa_gen.sh  http_fuzzer.py
monitoring/: flag_watchdog.py  prometheus.yml
mutants/: setup.cfg
ops/: backup_db.sh  backup_storage.sh  restore_db.sh
server/: Dockerfile  entrypoint.sh  flag  pyproject.toml
server/mutants/: mutmut-stats.json  setup.cfg
server/mutants/src/plugins/: xmp_perpage.py
server/mutants/test/: conftest.py  test_api.py  test_auth.py  test_watermarking_all_methods.py
server/scripts/: make_signed_url.py
server/src/: __init__.py  lsb_image.py  requirements.txt  server.py  test_lsb_tamper.py  unsafe_bash_bridge_append_eof.py  visible_stamp.py  watermarking_lsb.py  watermarking_method.py  watermarking_utils.py
server/src/plugins/: __init__.py  xmp_perpage.py
server/src/static/: documents.html  login.html
server/src/utils/: signed_links.py
server/test/: conftest.py  quick_test.py  test_api.py  test_auth.py  test_auth_cov.py  test_documents.py  test_documents_cov.py  test_eof_roundtrip.py  test_load_plugin_cov.py  test_lsb_pdf_watermark.py  test_lsb_roundtrip.py  test_lsb_tamper.py  test_lsb_wrong_key.py  test_pdf_lsb.py  test_rmap.py  test_signed_links.py  test_versions_cov.py  test_watermark_cov.py  test_watermarking_all_methods.py  test_watermarking_api.py  test_xmp_perpage.py
(+15 files in other folders)
