[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Tatou-Server"
version = "0.0.1"
description = "PDF Watermarking platform"
requires-python = ">=3.11"
dependencies = [
    "PyMuPDF>=1.21.1",
    "Flask==3.0.3",
    "gunicorn==21.2.0",
    "PyMySQL==1.1.2",
    "SQLAlchemy==2.0.43",
    "dill==0.4.0",
    "rmap @https://github.com/nharrand/RMAP-Server/releases/download/v2.0.0/rmap-2.0.0-py3-none-any.whl",
    "prometheus-flask-exporter>=0.23.0",
    "requests>=2.31.0",
    "pikepdf>=9.0.0",
	  "numpy>=1.26",
  	"pillow>=10.4",
    "prometheus_client>=0.17",
    "inotify_simple>=1.3.5",
    "python-dotenv>=1.0.0", 
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "coverage>=7.0.0",
    "ruff>=0.6.0",
    "pytest-cov>=4.0.0"
]

[project.scripts]
pdfwm = "watermarking_cli:main"
